feat: implement multi-channel messaging with SMS, WhatsApp and OTP support
- Add SMS support via AfrikSMS gateway (send, bulk, personalized, balance)
- Add WhatsApp support via Twilio gateway (send, templates, media)
- Add OTP verification service with configurable TTL and length
- Create fluent API builders (PendingSms, PendingBulkSms, PendingWhatsApp)
- Add Data objects for messages and responses
- Add contracts for gateway extensibility
- Add Laravel notification channels (sms, whatsapp)
- Add HasMessaging trait for models
- Add artisan command for balance check and test messages
- Add comprehensive test suite

--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -10,3 +10,10 @@ parameters:
     tmpDir: build/phpstan
     checkOctaneCompatibility: true
     checkModelProperties: true
+    ignoreErrors:
+        # Package config file - env() is correct here, Larastan thinks it's outside config dir
+        - identifier: larastan.noEnvCallsOutsideOfConfig
+          path: config/messaging.php
+        # Trait is meant to be used by package consumers
+        - identifier: trait.unused
+          path: src/Concerns/HasMessaging.php
