--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "require": {
         "php": "^8.4",
         "illuminate/contracts": "^11.0||^12.0",
-        "spatie/laravel-package-tools": "^1.16"
+        "spatie/laravel-package-tools": "^1.16",
+        "twilio/sdk": "^8.10"
     },
     "require-dev": {
         "larastan/larastan": "^3.0",
@@ -84,7 +85,10 @@
                 "Ratoufa\\Messaging\\MessagingServiceProvider"
             ],
             "aliases": {
-                "Messaging": "Ratoufa\\Messaging\\Facades\\Messaging"
+                "Messaging": "Ratoufa\\Messaging\\Facades\\Messaging",
+                "Sms": "Ratoufa\\Messaging\\Facades\\Sms",
+                "WhatsApp": "Ratoufa\\Messaging\\Facades\\WhatsApp",
+                "Otp": "Ratoufa\\Messaging\\Facades\\Otp"
             }
         }
     },
